--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/marked": "^5.0.2",
     "@types/node": "^24.3.1",
     "lucide-react": "^0.542.0",
+    "marked": "^16.4.0",
+    "motion": "^12.23.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.2",
